--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
 	<script src="leaflet/leaflet-src.js" type="text/javascript" charset="utf-8"></script>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="leaflet/leaflet.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="imagedistort/imagemarker.js"></script>
 	<script src="imagedistort/distortableimage.js"></script>
 	<script src="imagedistort/addcontrolpoints.js"></script>
